--- a/Style/css/masterR.css
+++ b/Style/css/masterR.css
@@ -9,8 +9,9 @@ body {
   }
   
   .login-box {
+    margin-top: 20px;
     width: 320px;
-    height: 520px;
+    height: 616px;
     background:#83D86A;
     color: #000;
     top: 50%;
